it freakin works, but the code sucks